tests/snapshots/helpers_generator_tests__utilities_module.snap
---
source: tests/helpers_generator_tests.rs
expression: result
---
/**
 * Common FHIR utility functions
 * 
 * This file is auto-generated. Do not edit manually.
 */
import { FhirPrimitive } from './primitives';
/**
 * Extract primitive value from FhirPrimitive<T> wrapper
 * 
 * @param primitive - The FhirPrimitive<T> or undefined
 * @returns The unwrapped value or undefined
 */
export function extractPrimitiveValue<T>(primitive: FhirPrimitive<T> | undefined): T | undefined {
    if (primitive === undefined) return undefined;
    if (typeof primitive === "object" && "value" in primitive) {
        return primitive.value;
    }
    return primitive as T;
}
